# RAO

./: .dockerignore  .gitignore  .gitlab-ci.yml  .gitmodules  DEPENDENCY_LICENSES.md  Dockerfile  NOTICE  README.md  pylock.toml  pyproject.toml  requirements.txt
.github/workflows/: ci-base-image.yml  ci-snapshot.yml  publish-snapshot.yml  release-ci.yml
common/: config_parser.py  decorators.py  helper.py  object_storage.py  rdf_converter.py  telemetry.py
config/: __init__.py  initialize_logging.py
config/input_retriever/: input_retriever.properties
config/integrations/: elastic.properties  rmq.properties
config/logging/: logging.properties
config/object_storage/: object_storage.properties
crac/: TC1_example_crac.json  nc_profile_to_crac.py  update_crac_limits_from_model.py  xslx_to_crac.py
input_retriever/: Dockerfile  config.properties  handlers.py  worker.py
integrations/: elastic.py  rmq.py  s3_storage.py
licenses/: THIRD_PARTY_LICENSES.txt
rao/: Dockerfile  config.properties  crac_builder.py  handlers.py  loadflow_settings.py  optimizer.py  parameters_v24.json  parameters_v30.json  params_mods.py  params_utils.py  worker.py
rao/common/: config_parser.py  object_storage.py
rao/crac/: TC1_example_crac.json  builder.py  context.py  models.py  nc_profile_to_crac.py  update_crac_limits_from_model.py
remedial_action_schedules/: Dockerfile  config.properties  handlers.py  worker.py
scripts/: generate_license_refs.sh  generate_notice.py  otel_instrument.sh  uv_sync.sh
tests/: lf_settings_override.json  test_lf_settings_manager.py
(+12 files in other folders)
