[project]
name = "rao"
version = "0.1.0"
description = "Baltic RCC RAO implementation"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "elasticsearch==8.11.0",
    "loguru>=0.7.3",
    "minio>=7.2.15",
    "ndjson>=0.3.1",
    "pandas>=2.2.3",
    "pika>=1.3.2",
    "pip>=25.1.1",
    "pydantic>=2.11.5",
    "pypowsybl>=1.11.0",
    "requests>=2.32.3",
    "setuptools>=80.4.0",
    "triplets>=0.0.8",
    "typing-extensions>=4.13.2",
    "uv>=0.7.3",
]

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"

[[tool.uv.index]]
name = "local-pypi"
url = "https://artifactory.elering.sise/artifactory/api/pypi/pssepip/simple"

[tool.uv]
allow-insecure-host = ["artifactory.elering.sise"]
